tests/method/missing_args.rev
struct Foo {
    fn method(a, b) {}
}

Foo().method(1) // error: wrong arguments number: expected 2 but got 1